# micro-fsm-c

./: conan-build  conanfile.py  fsm.c  fsm.h  main.c  meson.build  readme.md
